added recursive getMousePosition function/formatted

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
           <option value="brush">Brush</option>
           <option value="rectangle">Rectangle</option>
           <option value="circle">Circle</option>
+          <option value="fill">Paint Bucket</option>
         </select>
       </div>
       <span class="divider"></span>
