--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Simple Drawing Game</title>
     <script src="app.js"></script>
   </head>
   <body>
@@ -33,10 +32,10 @@
       </div>
       <span class="divider"></span>
       <div class="clear-div">
-        <label for="reset">Clear Canvas:</label>
+        <label for="resetButton">Clear Canvas:</label>
         <button id="resetButton">X</button>
       </div>
     </div>
-    <canvas id="canvas"></canvas>
+    <div id="color-palette">Primary Colors: </div>
   </body>
 </html>
